syntax = "proto3";

package kasho.license;

option go_package = "kasho/proto/kasho/proto;proto";

service License {
  // ValidateLicense checks if the current license is valid
  rpc ValidateLicense(ValidateLicenseRequest) returns (ValidateLicenseResponse) {}
  
  // GetLicenseInfo returns current license details
  rpc GetLicenseInfo(GetLicenseInfoRequest) returns (GetLicenseInfoResponse) {}
}

message ValidateLicenseRequest {}

message ValidateLicenseResponse {
  bool valid = 1;
  string reason = 2; // empty if valid, error message if invalid
  int64 expires_at = 3; // Unix timestamp
}

message GetLicenseInfoRequest {}

message GetLicenseInfoResponse {
  string customer_id = 1;
  string customer_name = 2;
  int64 issued_at = 3;
  int64 expires_at = 4;
  bool valid = 5;
}